--- a/long_read_qc/05-Practice.Rmd
+++ b/long_read_qc/05-Practice.Rmd
@@ -66,8 +66,8 @@ __Questions__:
 1. Which of the three samples contains the most subread data (Mb)?
 2. Which samples has the highest subread N50? And which the lowest?
 3. Which sample contains the longest subread, and what is it\'s approximate length?
-4. Considering all three samples, do any of them looked to have failed or sequenced very badly compared to the others?
+4. Considering all three samples, do any of them look to have failed or sequenced very badly compared to the others?
 
-The filtering tool from SequelTools would likely be of limited use here as the longest subread and total subread lengths are very similar, as we would want in a whole genome CLR project. For PacBio data it is common for downstream tools (such as assemblers, or ccs for amplicon data) will apply some filtering and thye require the raw data as input. We will cover specific examples in our future workshops that use PacBio sequences.
+The filtering tool from SequelTools would likely be of limited use here as the longest subread and total subread lengths are very similar, as we would want in a whole genome CLR project. For PacBio data it is common for downstream tools (such as assemblers, or ccs for amplicon data) to apply some filtering and they require the raw data as input. We will cover specific examples in our future workshops that use PacBio sequences.
 
 Hopefully that has been good practice and you are ready to QC your own data.
