--- a/long_read_qc/06-Furter_resources.Rmd
+++ b/long_read_qc/06-Furter_resources.Rmd
@@ -3,6 +3,15 @@
 knitr::include_graphics(path = "figures/further_resources.png", auto_pdf = TRUE)
 ``` 
 
+## Videos
+
+__ONT Sequencing__
+
+https://www.youtube.com/watch?v=RcP85JHLmnI
+
+__PacBio Sequencing__
+
+https://www.youtube.com/watch?v=_lD8JyAbwEo
 
 ## Long read sequencing resources
 ```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
