--- a/long_read_qc/Long read Quality Control.Rmd
+++ b/long_read_qc/Long read Quality Control.Rmd
@@ -10,6 +10,10 @@ biblio-style: apalike
 link-citations: yes
 ---
 
+```{r, fig.align = 'center',out.width= '30%', echo=FALSE }
+knitr::include_graphics(path = "figures/NEOF.png", auto_pdf = TRUE)
+``` 
+
 # Overview
 ```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
 knitr::include_graphics(path = "figures/well.png", auto_pdf = TRUE)
